GNOME Bugzilla – Bug 657366
nautilus crashed with SIGSEGV in gtk_tree_model_get_valist()
Last modified: 2012-02-06 19:12:29 UTC
this report has been filed here: https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/830185 "I tried to setup a bookmark for my /usr/ directory. Nautilus kept stubborn. I tried again. Then this error message appeared." ".
+ Trace 228211
Thread 1 (Thread 0x7f1fc76ac960 (LWP 1396))
same error in nautilus 3.0.2 in gtk_tree_model_get_valist at line: G_VALUE_LCOPY (&value, var_args, 0, &error);
gtk3 3.0.12 I clicked on a video file and nautilus crashed.
*** Bug 661338 has been marked as a duplicate of this bug. ***
look at the image and click with the mouse middle button int the red squad http://bugzilla-attachments.gnome.org/attachment.cgi?id=198669
DA!
Thanks, I fixed this in git master. A fix for this bug will also be available in Nautilus 3.2.1.
I open report. See [0][report launchpad] [0] https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/927787
+ Trace 229616