places-sidebar: don't crash when middle clicking on empty space

gtk_tree_view_get_path_at_pos() can fail; handle that case instead of
passing an invalid GtkTreePath.

https://bugzilla.gnome.org/show_bug.cgi?id=657366
https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/830185